--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import url('./global.css');
 @import url('./main-header.css');
 @import url('./main-section.css');
+@import url('./main-section--2.css');
