--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,7 @@
    line-height: inherit;
    margin: 0;
    padding: 0;
+   font-family: sans-serif;
 }
 
 .visually-hidden {
@@ -31,3 +32,26 @@ a {
    text-decoration: none;
 }
 
+h1 {
+   font-size: 44px;
+   line-height: 115%;
+   font-weight: Bold;
+}
+
+h2 {
+   font-size: 36px;
+   line-height: 115%;
+   font-weight: bold;
+}
+
+h3 {
+   font-size: 32px;
+   line-height: 115%;
+   font-weight: bold;
+}
+
+h4 {
+   font-size: 24px;
+   line-height: 115%;
+   font-weight: bold;
+}
