--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,4 @@
 @import url('./main-header.css');
 @import url('./main-section.css');
 @import url('./our-stars.css');
-@import url('./site-footer.css');
+@import url('./main-footer.css');
